--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,14 @@
 # Generic instructions: docker-compose up -d
 #
 # webDiplomacy instructions:
-# Copy config.sample.php to config.php
-# Run install/FullInstall/FullInstall.sql
-# Register user account, use http://localhost:43001 to access registration mail
-# Go to http://localhost:43000/gamemaster.php?gameMasterSecret= to set self as admin
-# Go to http://localhost:43000/admincp.php and enable maintenance mode
-# In the admin CP run the Clear variant caches command to ensure variants get installed fresh
-# Go to http://localhost:43000/datc.php and run batch test
-# Go to http://localhost:43000/admincp.php and disable maintenance mode
+# - Copy config.sample.php to config.php
+# - Run install/FullInstall/FullInstall.sql
+# - Register user account, use http://localhost:43001 to access registration mail
+# - Go to http://localhost:43000/gamemaster.php?gameMasterSecret= to set self as admin
+# - Go to http://localhost:43000/admincp.php and enable maintenance mode
+# - In the admin CP run the Clear variant caches command to ensure variants get installed fresh
+# - Go to http://localhost:43000/datc.php and run batch test
+# - Go to http://localhost:43000/admincp.php and disable maintenance mode
 # Server is ready for dev work
 #
 ###############################################################################
@@ -25,7 +25,7 @@ services:
   mailhog:
     image: "mailhog/mailhog:latest"
     ports:
-      - "43001:8025"
+      - "8025:8025"
 
   mariadb:
     image: "mariadb:10.6"
@@ -34,12 +34,10 @@ services:
     volumes:
       - "./:/application"
     environment:
-      - MYSQL_ROOT_PASSWORD=mypassword123
-      - MYSQL_DATABASE=webdiplomacy
-      - MYSQL_USER=webdiplomacy
-      - MYSQL_PASSWORD=mypassword123
-    ports:
-      - "43003:3306"
+      - MYSQL_ROOT_PASSWORD
+      - MYSQL_DATABASE
+      - MYSQL_USER
+      - MYSQL_PASSWORD
 
   phpmyadmin:
     image: phpmyadmin
@@ -86,7 +84,7 @@ services:
           - './:/application'
           - './phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf'
       ports:
-          - '${WEBDIP_PORT:-43000}:80'
+          - '${WEBDIP_PORT:-80}:80'
 
   soketi:
     container_name: "soketi_server"
