--- a/beta-src/package.json
+++ b/beta-src/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "beta",
   "dependencies": {
+    "@aws-amplify/ui-react": "^3.5.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@headlessui/react": "^1.6.5",
@@ -18,21 +19,22 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "aws-amplify": "^4.3.35",
     "axios": "^0.26.1",
     "d3": "^7.3.0",
     "dompurify": "^2.3.8",
     "env-cmd": "^10.1.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7",
     "react-use": "^17.4.0",
     "upgrade": "^1.1.0",
     "use-local-storage-state": "^17.2.0",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2",
-    "react-scroll": "^1.8.7",
-    "lodash": "^4.17.21"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -77,14 +79,14 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "express": "^4.18.1",
     "husky": "^7.0.4",
     "i": "^0.3.7",
     "npm": "^8.2.0",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.1.3",
-    "typescript": ">=4.5.2 <4.6.0",
-    "express": "^4.18.1",
-    "ts-node": "^10.8.2"
+    "ts-node": "^10.8.2",
+    "typescript": ">=4.5.2 <4.6.0"
   }
 }
