--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,21 +82,8 @@ services:
     environment:
       - PMA_ARBITRARY=1
 
-  clickhouse:
-    image: "yandex/clickhouse-server:latest"
-
-  # This is necessary for doing live React dev for the new board, but isn't needed after doing a build. If the nginx config is changed to not redirect /beta/ to port 3000:
-  webserver:
-    image: "nginx:alpine"
-    working_dir: /application
-    volumes:
-      - "./:/application"
-      - "./phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
-    ports:
-      - "${WEBDIP_PORT:-43000}:80"
-    depends_on:
-      - "php-fpm"
-
+  # This is necessary for doing live React dev for the new board, but isn't needed after doing a build
+  # if the nginx config is changed to not redirect /beta/ to port 3000:
   beta:
     image: "node:16.15.1-alpine3.14"
     container_name: webdiplomacy-beta
