--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
   mailhog:
     image: "mailhog/mailhog:latest"
     ports:
-      - "43001:8025"
+      - "8025:8025"
 
   mariadb:
     image: "mariadb:10.6"
@@ -39,7 +39,7 @@ services:
       - MYSQL_USER=webdiplomacy
       - MYSQL_PASSWORD=mypassword123
     ports:
-      - "43003:3306"
+      - "3306:3306"
 
   phpmyadmin:
     image: phpmyadmin
@@ -49,8 +49,8 @@ services:
     environment:
       - PMA_ARBITRARY=1
 
-  clickhouse:
-    image: "yandex/clickhouse-server:latest"
+  # clickhouse:
+  #   image: "yandex/clickhouse-server:latest"
 
   # This is necessary for doing live React dev for the new board, but isn't needed after doing a build
   # if the nginx config is changed to not redirect /beta/ to port 3000:
@@ -61,7 +61,7 @@ services:
     volumes:
       - "./beta-src:/application"
     ports:
-      - "3000"
+      - "3000:3000"
     command: >
       sh -c "npm install &&
               npm run start"
@@ -86,7 +86,7 @@ services:
           - './:/application'
           - './phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf'
       ports:
-          - '${WEBDIP_PORT:-43000}:80'
+          - '80:80'
 
   soketi:
     container_name: "soketi_server"
