Deception annotation of incoming/outgoing messages (#4)
* Added api.php feature to support annotation of incoming/outgoing messages for
deception.

* Annotating incoming messages.

* Adding updates to api in order to return message deception annotation.

--- a/beta-src/package.json
+++ b/beta-src/package.json
@@ -41,7 +41,7 @@
     "keyboardjs": "github:markjaniczak/KeyboardJS"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
     "build": "react-scripts build && rm -rf ../beta && mv build ../beta",
     "build:local": "env-cmd -f .env.local npm run build",
     "build:production": "env-cmd -f .env.production npm run build",
@@ -49,7 +49,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "cd .. && husky install beta-src/.husky",
-    "start:local": "nodemon server.js"
+    "start:local": "nodemon server.js",
+    "lint": "eslint --ext .tsx src"
   },
   "eslintConfig": {
     "extends": [
