Commiting every change done for cognito integration + drive-by, in order to debug new memcached issue.

--- a/phpdocker/php-fpm/Dockerfile
+++ b/phpdocker/php-fpm/Dockerfile
@@ -3,10 +3,12 @@ WORKDIR "/application"
 
 RUN apt-get update; \
     apt-get -y --no-install-recommends install \
-        git \ 
-        php7.4-gd \ 
-        php7.4-memcached \ 
-        php7.4-mysql \ 
+        git \
+        nodejs=18.7.0 \
+        npm=8.15.0 \
+        php7.4-gd \
+        php7.4-memcached \
+        php7.4-mysql \
         php7.4-xdebug \
         mariadb-client; \
     apt-get clean; \
