--- a/beta-src/package.json
+++ b/beta-src/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.7",
     "react-use": "^17.4.0",
+    "unique-names-generator": "^4.7.1",
     "upgrade": "^1.1.0",
     "use-local-storage-state": "^17.2.0",
     "uuid": "^8.3.2",
