Cognito jwt token verify is working on API PHP. Now need to get the email from the token (which is available) and use that to match userid.

--- a/phpdocker/php-fpm/Dockerfile
+++ b/phpdocker/php-fpm/Dockerfile
@@ -4,12 +4,15 @@ WORKDIR "/application"
 RUN apt-get update; \
     apt-get -y --no-install-recommends install \
         git \
-        nodejs=18.7.0 \
-        npm=8.15.0 \
         php7.4-gd \
         php7.4-memcached \
         php7.4-mysql \
         php7.4-xdebug \
-        mariadb-client; \
-    apt-get clean; \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
+        mariadb-client;
+
+RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash -;
+
+RUN apt-get install -y nodejs;
+
+RUN apt-get clean; \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*;
