--- a/beta-src/amplify/backend/backend-config.json
+++ b/beta-src/amplify/backend/backend-config.json
@@ -26,5 +26,12 @@
         ]
       }
     }
+  },
+  "function": {
+    "webDiplomacyPostConfirmUserEmail": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
   }
 }
