Commented out code that generates username on App.tsx since that's handled by the cognito lambda signup trigger now. Come comments and packages added to lambda trigger code.

--- a/beta-src/amplify/backend/function/webDiplomacyPostConfirmUserEmail/src/package.json
+++ b/beta-src/amplify/backend/function/webDiplomacyPostConfirmUserEmail/src/package.json
@@ -8,7 +8,9 @@
     "@types/aws-lambda": "^8.10.92"
   },
   "dependencies": {
+    "aws-sdk": "^2.1231.0",
     "axios": "^1.1.2",
+    "lodash": "^4.17.21",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.0"
   }
