--- a/beta-src/amplify/backend/backend-config.json
+++ b/beta-src/amplify/backend/backend-config.json
@@ -37,7 +37,15 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda",
-      "dependsOn": []
+      "dependsOn": [
+        {
+          "category": "auth",
+          "resourceName": "webdiplomacybetabrc2ee57c11",
+          "attributes": [
+            "UserPoolId"
+          ]
+        }
+      ]
     }
   },
   "api": {
