--- a/beta-src/package.json
+++ b/beta-src/package.json
@@ -47,12 +47,24 @@
     "eject": "react-scripts eject",
     "prepare": "cd .. && husky install beta-src/.husky",
     "start:local": "nodemon server.js",
-    "lint": "eslint --ext .tsx src"
+    "lint": "eslint --ext .tsx src",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
@@ -68,10 +80,21 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-interactions": "^6.5.12",
+    "@storybook/addon-links": "^6.5.12",
+    "@storybook/builder-webpack5": "^6.5.12",
+    "@storybook/manager-webpack5": "^6.5.12",
+    "@storybook/node-logger": "^6.5.12",
+    "@storybook/preset-create-react-app": "^4.1.2",
+    "@storybook/react": "^6.5.12",
+    "@storybook/testing-library": "^0.0.13",
     "@svgr/cli": "^6.2.0",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "autoprefixer": "^10.4.7",
+    "babel-plugin-named-exports-order": "^0.0.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-prettier": "^8.3.0",
@@ -87,8 +110,10 @@
     "npm": "^8.2.0",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
+    "prop-types": "^15.8.1",
     "tailwindcss": "^3.1.3",
     "ts-node": "^10.8.2",
-    "typescript": ">=4.5.2 <4.6.0"
+    "typescript": ">=4.5.2 <4.6.0",
+    "webpack": "^5.74.0"
   }
 }
