--- a/beta-src/package.json
+++ b/beta-src/package.json
@@ -23,6 +23,8 @@
     "dompurify": "^2.3.8",
     "env-cmd": "^10.1.0",
     "react": "^17.0.2",
+    "react-dnd": "15.1.2",
+    "react-dnd-html5-backend": "15.1.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
