--- a/supporting-scripts/package.json
+++ b/supporting-scripts/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "magic-verify",
+  "name": "supporting-scripts",
+  "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
