--- a/beta-src/package.json
+++ b/beta-src/package.json
@@ -29,6 +29,7 @@
     "react-dnd": "15.1.2",
     "react-dnd-html5-backend": "15.1.3",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.7",
