--- a/beta-src/package.json
+++ b/beta-src/package.json
@@ -24,7 +24,6 @@
     "d3": "^7.3.0",
     "dompurify": "^2.3.8",
     "env-cmd": "^10.1.0",
-    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dnd": "15.1.2",
     "react-dnd-html5-backend": "15.1.3",
@@ -32,13 +31,21 @@
     "react-error-boundary": "^3.1.4",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
-    "react-scroll": "^1.8.7",
     "react-use": "^17.4.0",
     "unique-names-generator": "^4.7.1",
     "upgrade": "^1.1.0",
     "use-local-storage-state": "^17.2.0",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "pusher-js": "^7.0.6",
+    "react-scroll": "^1.8.7",
+    "lodash": "^4.17.21",
+    "framer-motion": "^6.5.1",
+    "waait": "^1.0.5",
+    "formik": "^2.2.9",
+    "@tailwindcss/forms": "^0.5.2",
+    "keyboardjs": "github:markjaniczak/KeyboardJS"
+
   },
   "scripts": {
     "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
